fixes to enable build/tests (add-exports removed), h5 stylings