@@ -33,30 +33,29 @@
 		<surefire.testFailureIgnore>false</surefire.testFailureIgnore>
 		<maven.test.failure.ignore>false</maven.test.failure.ignore>
 		<add-opens-unnamed>
-			java.base/java.lang=ALL-UNNAMED
-			java.base/java.util=ALL-UNNAMED
-			java.base/java.text=ALL-UNNAMED
-			java.base/java.time.format=ALL-UNNAMED
-			java.base/java.lang.reflect=ALL-UNNAMED
-			java.base/sun.reflect.annotation=ALL-UNNAMED
-			java.base/sun.security.x509=ALL-UNNAMED
-			java.base/javax.security.auth=ALL-UNNAMED
-			java.base/java.io=ALL-UNNAMED
-			java.base/sun.nio.ch=ALL-UNNAMED
-			java.base/java.net=ALL-UNNAMED
-			java.base/sun.security.ssl=ALL-UNNAMED
-			java.base/java.nio.charset=ALL-UNNAMED
-			jdk.unsupported/jdk.internal.module=ALL-UNNAMED
-			java.xml/javax.xml.stream.events=ALL-UNNAMED
-			java.xml/org.w3c.dom=ALL-UNNAMED
-			java.xml/javax.xml.namespace=ALL-UNNAMED
-			jdk.management/com.sun.management.internal=ALL-UNNAMED
-			java.management/sun.management=ALL-UNNAMED
+java.base/java.lang=ALL-UNNAMED
+java.base/java.util=ALL-UNNAMED
+java.base/java.text=ALL-UNNAMED
+java.base/java.time.format=ALL-UNNAMED
+java.base/java.lang.reflect=ALL-UNNAMED
+java.base/sun.reflect.annotation=ALL-UNNAMED
+java.base/sun.security.x509=ALL-UNNAMED
+java.base/javax.security.auth=ALL-UNNAMED
+java.base/java.io=ALL-UNNAMED
+java.base/sun.nio.ch=ALL-UNNAMED
+java.base/java.net=ALL-UNNAMED
+java.base/sun.security.ssl=ALL-UNNAMED
+jdk.unsupported/jdk.internal.module=ALL-UNNAMED
+java.xml/javax.xml.stream.events=ALL-UNNAMED
+java.xml/org.w3c.dom=ALL-UNNAMED
+java.xml/javax.xml.namespace=ALL-UNNAMED
+jdk.management/com.sun.management.internal=ALL-UNNAMED
+java.management/sun.management=ALL-UNNAMED
 		</add-opens-unnamed>
+		<!-- WARN: add-exports only on compile scope otherwise jar file will be corrupt -->
 		<add-export-unnamed>
-			java.unsupported/jdk.internal.module=ALL-UNNAMED
-			java.base/sun.security.x509=ALL-UNNAMED
-			java.management/sun.management=ALL-UNNAMED
+java.base/sun.security.x509=ALL-UNNAMED
+java.management/sun.management=ALL-UNNAMED
 		</add-export-unnamed>
 	</properties>
 	<build>
@@ -258,12 +257,12 @@
 									<Application-redirect>/download</Application-redirect>
 									<Permissions>all-permissions</Permissions>
                                     <Add-Modules>ALL-SYSTEM</Add-Modules>
-                                    <Add-Opens>
+                                    <!-- <Add-Opens>
 										${add-opens-unnamed}
 									</Add-Opens>
                                     <Add-Exports>
 										${add-export-unnamed}
-                                    </Add-Exports>
+                                    </Add-Exports> -->
 								</manifestEntries>
 							</archive>
 							<excludes>
@@ -290,12 +289,12 @@
 									<Application-Source>${application.source}</Application-Source>
 									<Application-redirect>/download</Application-redirect>
 									<Permissions>all-permissions</Permissions>
-                                    <Add-Opens>
+                                    <!-- <Add-Opens>
 										${add-opens-unnamed}
 									</Add-Opens>
                                     <Add-Exports>
 										${add-export-unnamed}
-                                    </Add-Exports>
+                                    </Add-Exports> -->
 								</manifestEntries>
 							</archive>
 							<excludes>
@@ -322,12 +321,12 @@
 									<Application-Source>${application.source}</Application-Source>
 									<Application-redirect>/download</Application-redirect>
 									<Permissions>all-permissions</Permissions>
-                                    <Add-Opens>
+                                    <!-- <Add-Opens>
 										${add-opens-unnamed}
 									</Add-Opens>
                                     <Add-Exports>
 										${add-export-unnamed}
-                                    </Add-Exports>
+                                    </Add-Exports> -->
 								</manifestEntries>
 							</archive>
 							<excludes>
@@ -354,12 +353,12 @@
 									<Application-Source>${application.source}</Application-Source>
 									<Application-redirect>/download</Application-redirect>
 									<Permissions>all-permissions</Permissions>
-                                    <Add-Opens>
+                                    <!-- <Add-Opens>
 										${add-opens-unnamed}
 									</Add-Opens>
                                     <Add-Exports>
 										${add-export-unnamed}
-                                    </Add-Exports>
+                                    </Add-Exports> -->
 								</manifestEntries>
 							</archive>
 							<!-- <archive> <manifest> <addClasspath>true</addClasspath> <classpathLayoutType>repository</classpathLayoutType> 
@@ -421,12 +420,12 @@
 									<Application-Source>${application.source}</Application-Source>
 									<Application-redirect>/download</Application-redirect>
 									<Permissions>all-permissions</Permissions>
-                                    <Add-Opens>
+                                    <!-- <Add-Opens>
 										${add-opens-unnamed}
 									</Add-Opens>
                                     <Add-Exports>
 										${add-export-unnamed}
-                                    </Add-Exports>
+                                    </Add-Exports> -->
 								</manifestEntries>
 							</archive>
 							<!-- excludes don't work! -->
@@ -470,57 +469,32 @@
 									   <jvmarg value="--add-opens=java.base/java.time.format=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED" />
-									   <jvmarg value="--add-opens=jdk.unsupported/jdk.internal.module=ALL-UNNAMED" />
-									   <jvmarg value="--add-exports=jdk.unsupported/jdk.internal.module=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/sun.security.x509=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/javax.security.auth=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/java.io=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/sun.nio.ch=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/java.net=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.base/sun.security.ssl=ALL-UNNAMED" />
-										<jvmarg value="--add-opens=java.base/java.nio.charset=ALL-UNNAMED" />
 										<jvmarg value="--add-opens=java.xml/javax.xml.stream.events=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.xml/org.w3c.dom=ALL-UNNAMED" />
 									   <jvmarg value="--add-opens=java.xml/javax.xml.namespace=ALL-UNNAMED" />
-									   <jvmarg value="--add-exports=java.management/sun.management=ALL-UNNAMED" />
 										<jvmarg value="--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED" />
 										<jvmarg value="--add-opens=java.management/sun.management=ALL-UNNAMED" />
-										<jvmarg value="--add-exports=jdk.management/com.sun.management.internal=ALL-UNNAMED" />
-										<jvmarg value="--add-exports java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED" />
-										<jvmarg value="--add-exports=jdk.unsupported/jdk.internal.module=ALL-UNNAMED" />
-									<sysproperty
-										key="app.server.running" value="true" />
-	                                <sysproperty key="app.database.internal.server.run"
-										value="true" />
+									<sysproperty key="app.server.running" value="true" />
+	                                <sysproperty key="app.database.internal.server.run" value="true" />
 	                                <sysproperty key="websocket.use" value="true" />
-	                                <sysproperty key="tsl2nano.offline"
-										value="true" />
+	                                <sysproperty key="tsl2nano.offline" value="true" />
 	                                <sysproperty key="tsl2.nano.test" value="true" />
-	                                <sysproperty
-										key="app.show.startpage" value="false" />
+	                                <sysproperty key="app.show.startpage" value="false" />
 									<sysproperty key="app.update.interval.days" value="-1" />
-									<sysproperty
-										key="app.stop.allow.system.exit" value="true" />
-									<sysproperty key="app.session.anticsrf"
-										value="false" />>
+									<sysproperty key="app.stop.allow.system.exit" value="false" />
+									<sysproperty key="app.session.anticsrf" value="false" />>
 								</java>
-								<sleep seconds="15" />
+								<sleep seconds="5" />
 								<echo>RESUMING ${project.build.finalName} integration-test</echo>
 	                        </target>
 	                    </configuration>
 	                </execution>
-					<!-- <execution>
-						<id>echoproperties</id>
-						<phase>pre-integration-test</phase>
-							<goals>
-								<goal>run</goal>
-							</goals>
-							<configuration>
-								<target>
-									<echoproperties/>
-								</target>
-							</configuration>
-						</execution> -->
 					</executions>
 	        </plugin>
 		</plugins>
